--- a/source/K210(K210).md
+++ b/source/K210(K210).md
@@ -433,7 +433,7 @@ uart_A.<span class="function">write</span>(<span class="string">"$Hello Yahboom#
 </div>
 
 <div class="notice">
-    <p>STM32 car code</p>
+    <p>Self-balancing Robot code</p>
 </div>
 
 <div class="code-container">
